updated the new format of sms

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -109,7 +109,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/tvWakeUp"
                 android:layout_toStartOf="@+id/tvWakeUp"
-                android:text="Japa:"
+                android:text="JAPA:"
                 android:textColor="#000000"
                 android:textSize="15sp" />
 
@@ -126,32 +126,6 @@
                 android:textColor="#000000"
                 android:textSize="15sp" />
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/tvHearing"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_toLeftOf="@+id/tvWakeUp"
-                android:layout_toStartOf="@+id/tvWakeUp"
-                android:text="Hearing:"
-                android:textColor="#000000"
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/tvHearing"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/tvJapa"
-                android:layout_marginRight="29dp"
-                android:layout_marginTop="10dp"
-                android:ems="10"
-                android:hint="@string/hearing"
-                android:textColor="#000000"
-                android:textSize="15sp" />
-
 
             <TextView
                 android:id="@+id/textView7"
@@ -162,7 +136,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/tvWakeUp"
                 android:layout_toStartOf="@+id/tvWakeUp"
-                android:text="Reading:"
+                android:text="RE:"
                 android:textColor="#000000"
                 android:textSize="15sp" />
 
@@ -171,7 +145,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_below="@+id/tvHearing"
+                android:layout_below="@+id/tvJapa"
                 android:layout_marginRight="29dp"
                 android:layout_marginTop="10dp"
                 android:ems="10"
@@ -180,20 +154,20 @@
                 android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/tvStudy"
+                android:layout_alignTop="@+id/tvHearing"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/tvWakeUp"
                 android:layout_toStartOf="@+id/tvWakeUp"
-                android:text="Study:"
+                android:text="HR:"
                 android:textColor="#000000"
                 android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/tvStudy"
+                android:id="@+id/tvHearing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -201,45 +175,63 @@
                 android:layout_marginRight="29dp"
                 android:layout_marginTop="10dp"
                 android:ems="10"
-                android:hint="@string/study"
+                android:hint="@string/hearing"
                 android:textColor="#000000"
                 android:textSize="15sp" />
+
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/tvServiceTime"
+                android:layout_alignTop="@+id/tvIServiceTime"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/tvWakeUp"
                 android:layout_toStartOf="@+id/tvWakeUp"
-                android:text="Service:"
+                android:text="IS:"
                 android:textColor="#000000"
                 android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/tvServiceTime"
+                android:id="@+id/tvIServiceTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_below="@+id/tvStudy"
+                android:layout_below="@+id/tvHearing"
                 android:layout_marginRight="29dp"
                 android:layout_marginTop="10dp"
                 android:ems="10"
-                android:hint="@string/service_duration"
+                android:hint="@string/is_duration"
                 android:textColor="#000000"
                 android:textSize="15sp" />
 
-            <EditText
-                android:id="@+id/etServiceType"
-                android:layout_width="230dp"
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tvServiceTime"
-                android:layout_centerHorizontal="true"
+                android:layout_alignTop="@+id/tvPServiceTime"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/tvWakeUp"
+                android:layout_toStartOf="@+id/tvWakeUp"
+                android:text="PS:"
+                android:textColor="#000000"
+                android:textSize="15sp" />
+
+
+            <TextView
+                android:id="@+id/tvPServiceTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/tvIServiceTime"
+                android:layout_marginRight="29dp"
                 android:layout_marginTop="10dp"
-                android:hint="@string/service_type"
-                android:textColor="#000000" />
+                android:ems="10"
+                android:hint="@string/ps_duration"
+                android:textColor="#000000"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@id/textView"
@@ -247,7 +239,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/etSentBy"
                 android:layout_alignStart="@+id/etSentBy"
-                android:layout_below="@+id/etServiceType"
+                android:layout_below="@+id/tvPServiceTime"
                 android:layout_marginTop="20dp"
                 android:text="Send As:"
                 android:textColor="#000000" />
